fixed invisible code keywords in dark theme, fixes #158

--- a/src/main/resources/static/styles/dark.css
+++ b/src/main/resources/static/styles/dark.css
@@ -54,7 +54,8 @@ table.striped>tbody>tr:nth-child(odd) { background-color: #333; }
 .swagger-ui .opblock-title_normal p, .swagger-ui table thead tr td, .swagger-ui table thead tr th,
 .swagger-ui .parameter__name, .swagger-ui .parameter__type, .swagger-ui .response-col_status,
 .swagger-ui .opblock .opblock-section-header h4, .swagger-ui .model-title,
-.swagger-ui .responses-inner h4, .swagger-ui .responses-inner h5 { color: #efefef; }
+.swagger-ui .responses-inner h4, .swagger-ui .responses-inner h5,
+.hljs-keyword, .hljs-selector-tag, .hljs-subst { color: #efefef; }
 .swagger-ui .scheme-container { background-color: transparent; }
 .swagger-ui .dialog-ux .modal-ux, .swagger-ui input[type=email], .swagger-ui input[type=file],
 .swagger-ui input[type=password], .swagger-ui input[type=search], .swagger-ui input[type=text],
